# cpp-fuzzymath

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: conda_build.yaml  test_library.yaml
cmake/: Config.cmake.in
conda/: bld.bat  build.sh  meta.yaml  test_script.bat  test_script.sh
src/: AlphaCut.cpp  CMakeLists.txt  Functions.cpp  FuzzyMembership.cpp  FuzzyNumber.cpp  FuzzyNumberFactory.cpp  Interval.cpp  PossibilisticMembership.cpp
src/api/: AlphaCut.h  Functions.h  FuzzyMath.h  FuzzyMembership.h  FuzzyNumber.h  FuzzyNumberFactory.h  Interval.h  PossibilisticMembership.h  Types.h
tests/: CMakeLists.txt  gtest_extensions.h  test_alpha_cut.cpp  test_fuzzy_number.cpp  test_interval.cpp
